--- a/src/flexion/AceroEnCompresionScreen.form
+++ b/src/flexion/AceroEnCompresionScreen.form
@@ -84,6 +84,9 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="52" red="0" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection code="Float.toString(aec.getR())" type="code"/>
         </Property>
